weather-app/src/main.css
/* ------------------         SCROLL BAR         ----------------*/
.week-container,
body::-webkit-scrollbar {
  display: none;
}

body {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

/* ------------------         MAIN GROUPS        ------------------ */
#root {
  display: flex;
  flex-direction: column;
}

.main-container {
  width: 49vw;
}
.main-group {
  display: flex;
}
.left-group {
  display: flex;
  float: left;
  flex-direction: column;
  width: 49%;
  min-height: 75vh;
  margin-top: 0.5rem;
  margin-left: 2rem;
  margin-bottom: 0.5rem;
  margin-right: 0.5rem;
  padding: 0.5rem;
  border-radius: 20px;
  box-shadow: 0px 0px 8px 2px rgba(15, 15, 15, 0.404);
}
.right-group {
  display: flex;
  float: right;
  flex-direction: column;
  width: 49%;
  min-height: 75vh;
  margin-top: 0.5rem;
  margin-left: 0.5rem;
  margin-bottom: 0.5rem;
  margin-right: 2rem;
  padding: 0.5rem;
  border-radius: 20px;
  box-shadow: 0px 0px 8px 2px rgba(15, 15, 15, 0.404);
}

svg:hover {
  color: brown;
}

p {
  margin-top: 10px;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  margin-block-start: 0;
  margin-block-end: 0;
}

/*----------------------     MEDIA QUERIES    ---------------------*/
@media only screen and (max-width: 1024px) {

  .main-group {
    flex-direction: column;
    justify-content: center;
  }

  .left-group {
    width: 90%;
    margin-top: 1%;
    margin-right: 5%;
    margin-bottom: 0rem;
    margin-left: 5%;
    background: none;
    padding: unset;
    box-shadow: none;
  }

  .week-container {
    display: flex;
    justify-content: flex-start;
    padding: 0.3rem 0rem;
    align-self: center;
    overflow-x: scroll;
    max-width: 70vw !important;
  }

  .right-group {
    width: 90%;
    margin-top: 0.1rem !important;
    margin-right: 5%;
    margin-bottom: 5%;
    margin-left: 5%;
    padding: unset;
    box-shadow: none;
  }
  
  .main-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-self: center;
  }

  .search {
    font-size: small !important;
    margin-right: 0% !important;
    margin-left: 0% !important;
    margin-top: 0% !important;
  }

}

/* @media only screen and (max-width: 560px) {
  .left-group {
    min-height: 65vh !important;
  }

  .city {
    font-size: xx-small !important;
  }

  #weather-temp {
    font-size: large !important;
    font-weight: lighter !important;
  }

  .city-temp {
    font-size: xxx-large !important;
    margin: 1rem !important;
  }

  .condition-icon {
    width: 3rem !important;
    margin-top: 0px !important;
  }

  #feels {
    margin-top: -2rem !important;
    font-size: large !important;
  }

  .condition {
    margin-top: -2rem !important;
    margin-bottom: -1rem !important;
  }
  #todays-date {
    margin: 0;
  }
}

@media only screen and (max-width: 409px) {
  .logo {
    width: 8rem !important;
    height: 2.5rem !important;
  }

  .container-quote {
    height: fit-content !important;
    margin: auto;
  }
} */

